--- a/Natours/starter/sass/abstract/_variables.scss
+++ b/Natours/starter/sass/abstract/_variables.scss
@@ -10,7 +10,11 @@ $color-grey-dark: #777;
 $color-white: whitesmoke;
 $color-black: #000;
 
+// FONT
+$default-font-size: 1.6rem;
+
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem
+
