--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -14,6 +14,8 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
     &--front {
       background-color: $color-white;
@@ -21,9 +23,11 @@
     };
 
     &--back {
-      background-color: $color-primary;
       transform: rotateY(180deg);
 
+      &-1 {
+        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark)
+      }
     }
   }
 
