--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -1,39 +1,49 @@
 .card {
   // FUNCTIONALITY
   perspective: 150rem;
-  -moz-perspective: 150rem; 
+  -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
 
-
   &__side {
     height: 52rem;
-    transition: all .8s ease;
+    transition: all 0.8s ease;
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &--front {
       background-color: $color-white;
-
-    };
+    }
 
     &--back {
       transform: rotateY(180deg);
 
       &-1 {
-        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark)
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
       }
       &-2 {
-        background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark)
+        background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        );
       }
       &-3 {
-        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark)
+        background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        );
       }
     }
   }
@@ -54,20 +64,30 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
-
     &--1 {
-      background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
-      url(../img/nat-5.jpg)
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
     }
     &--2 {
-      background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
-      url(../img/nat-6.jpg)
+      background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        ),
+        url(../img/nat-6.jpg);
     }
     &--3 {
-      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
-      url(../img/nat-7.jpg)
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url(../img/nat-7.jpg);
     }
-
   }
 
   &__heading {
@@ -87,13 +107,25 @@
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
     &--1 {
-      background-image: linear-gradient(to right bottom, rgba($color-secondary-light, 85), rgba($color-secondary-dark, 85));
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 85),
+        rgba($color-secondary-dark, 85)
+      );
     }
     &--2 {
-      background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, 85), rgba($color-tertiary-dark, 85));
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light, 85),
+        rgba($color-tertiary-dark, 85)
+      );
     }
     &--3 {
-      background-image: linear-gradient(to right bottom, rgba($color-primary-light, 85), rgba($color-primary-dark, 85));
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 85),
+        rgba($color-primary-dark, 85)
+      );
     }
   }
 
@@ -102,7 +134,7 @@
       list-style: none;
       width: 80%;
       margin: 0 auto;
-      
+
       li {
         text-align: center;
         font-size: 1.5rem;
@@ -112,7 +144,6 @@
           border-bottom: 1px solid $color-grey-light-2;
         }
       }
-
     }
   }
 
@@ -124,7 +155,6 @@
     transform: translate(-50%, -50%);
     width: 90%;
     text-align: center;
-
   }
 
   &__price-box {
@@ -142,4 +172,3 @@
     font-weight: 100;
   }
 }
-
