--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -102,6 +102,12 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -118,10 +124,11 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -9rem; }
 
-.btn:link, .btn :visited {
+.btn:link,
+.btn :visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -147,6 +154,12 @@ body {
   .btn--white::after {
     background-color: whitesmoke; }
 
+.btn--green {
+  background-color: #55c57a;
+  color: whitesmoke; }
+  .btn--green::after {
+    background-color: #55c57a; }
+
 .btn::after {
   content: '';
   display: inline-block;
@@ -170,7 +183,7 @@ body {
   text-decoration: none;
   border-bottom: 2px solid #55c57a;
   padding: 3px;
-  transition: all .2s; }
+  transition: all 0.2s; }
 
 .btn-text:hover {
   background-color: #55c57a;
@@ -234,7 +247,7 @@ body {
   height: 52rem; }
   .card__side {
     height: 52rem;
-    transition: all .8s ease;
+    transition: all 0.8s ease;
     position: absolute;
     top: 0;
     left: 0;
@@ -262,7 +275,9 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card__picture--2 {
@@ -307,6 +322,7 @@ body {
     width: 90%;
     text-align: center; }
   .card__price-box {
+    text-align: center;
     color: whitesmoke;
     margin-bottom: 8rem; }
   .card__price-only {
