--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,7 +1,6 @@
-
-
 .btn {
-  &:link, :visited {
+  &:link,
+  :visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -9,7 +8,7 @@
     border-radius: 10rem;
     transition: all 0.2s;
     position: relative;
-  };
+  }
 
   &:hover {
     transform: translateY(-0.3rem);
@@ -19,12 +18,12 @@
       transform: scaleX(1.4) scaleY(1.6);
       opacity: 0;
     }
-  };
+  }
 
   &:active {
     transform: translateY(-1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-  };
+  }
 
   &--white {
     background-color: $color-white;
@@ -33,7 +32,16 @@
     &::after {
       background-color: $color-white;
     }
-  };
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
 
   &::after {
     content: '';
@@ -46,7 +54,7 @@
     left: 0;
     z-index: -1;
     transition: all 0.4s;
-  };
+  }
 
   &--animated {
     animation: moveInButton 0.5s ease-out 0.75s;
@@ -63,19 +71,18 @@
     text-decoration: none;
     border-bottom: 2px solid $color-primary;
     padding: 3px;
-    transition: all .2s
+    transition: all 0.2s;
   }
 
   &:hover {
     background-color: $color-primary;
     color: $color-white;
-    box-shadow: 0 1rem 2rem rgba($color-black, .15);
-    transform: translateY(-2px)
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
   }
 
   &:active {
-    box-shadow: 0 .5rem 2rem rgba($color-black, .15);
-    transform: translateY(0)
+    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.15);
+    transform: translateY(0);
   }
-
 }
