--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -128,8 +128,8 @@ body {
   margin-top: -9rem; }
 
 .section-stories {
-  padding: 15rem 0;
-  background-color: #f7f7f7; }
+  position: relative;
+  padding: 15rem 0; }
 
 .btn:link,
 .btn :visited {
@@ -341,7 +341,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.6);
   border-radius: 3px;
   padding: 4rem;
   padding-left: 9rem;
@@ -383,6 +383,20 @@ body {
   .story:hover .story__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(90%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .header {
   height: 95vh;
