--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,6 +1,7 @@
 .btn {
+  &,
   &:link,
-  :visited {
+  &:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -8,6 +9,11 @@
     border-radius: 10rem;
     transition: all 0.2s;
     position: relative;
+    font-size: $default-font-size;
+
+    // Change forthe <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -20,7 +26,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
