--- a/Natours/starter/sass/abstract/_mixins.scss
+++ b/Natours/starter/sass/abstract/_mixins.scss
@@ -2,6 +2,13 @@
   &::after {
     content: '';
     display: table;
-    clear: both
+    clear: both;
   }
+}
+
+@mixin centerHorizontalVertical {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
