--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -9,9 +9,24 @@
 html {
   // defines 1rem to 10px
   font-size: 61.5%;
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 60%;
+  }
+
+  @include respond(tab-land) {
+    font-size: 70%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 80%;
+  }
 }
 
 body {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
-
