--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -8,22 +8,18 @@
 
 html {
   // defines 1rem to 10px
-  font-size: 61.5%;
-
-  @include respond(phone) {
-    font-size: 50%;
-  }
+  font-size: 61.5%; //1rem = 10px/16px = 62.4%
 
   @include respond(tab-port) {
-    font-size: 60%;
+    font-size: 50%; //1rem = 8px, 8/16 = 56.25
   }
 
   @include respond(tab-land) {
-    font-size: 70%;
+    font-size: 56.25%; //1rem = 9px, 9/16 = 56.25
   }
 
   @include respond(big-desktop) {
-    font-size: 80%;
+    font-size: 75%; //1rem = 12, 12/16
   }
 }
 
